src/test/resources/public/input/typechecking/pass/pass10.jova
class Evaluation{
    public int x;

  public int func1(){
    return 1;
  }

   public string func2(int a, int b, string asdf){
      int x, zz;

      return 1;
   }

}

class Testing {
    private Evaluation e;

    public int func2() {
        int x;
        return e.func2(e.x, "ff", "fff");
        //return e.func2(2);
    }
}



