src/test/resources/public/input/typechecking/fail/ternary/fail03.jova
class Cls{
	
	private int func(){
		
		char a;
		bool b;
		b = false;
		a = b ? 'f' : "string";
		return a;
		
	}

}